# autotools-demo

./: Makefile.am  configure.ac  libdemo.c
